# arche

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CNAME  Dockerfile  GammaBuilder.cabal  Makefile  PhDThesisEdgarGomes.html  README.md  all.css  arche.cabal  benchmark.Dockerfile  collapseTOC.js  config-server.json  gamma-builder.cabal  index.html  install.html  linux.Dockerfile  mkdocs.yml  navigation.html  server.Dockerfile  shell.nix  stack.yaml  usage.html  wine.Dockerfile
.github/workflows/: ci.yml  deploy-and-release.yml
app/: .firebaserc  .gitignore  Makefile  elm.json  elmapp.config.js  firebase.json  package-lock.json  package.json  shell.nix
app/public/: index.html  manifest.json  policy.html
app/src/: API.elm  GammaViewer.elm  Globals.elm  Main.elm  Utils.elm  cors.json  index.js  main.css  spinner.css
app/src/Draw/: Assembler.elm  Loader.elm  Shaders.elm  Types.elm
app/src/Page/: Draw.elm  Navegate.elm  SignIn.elm  Upload.elm
app/src/Type/: Arche.elm  ArcheTree.elm  EBSD.elm  FocusedList.elm  OR.elm  Texture.elm
app/src/Widget/: ArcheResultExplorer.elm
aws-config/: application_json_mapping.json  stack.dhall
benchmark/: Main.hs
benchmark/Benchmark/: OR.hs  ORFit.hs
benchmark/data/: TestSample.ang
docs/: Makefile  install.md  navigation.md  usage.md
docs/css/: bootstrap.min.css  screen.css
docs/src/: PhDThesisEdgarGomes.md  aws.md  index.md  install.md  usage.md
docs/src/API/: API.md
docs/templates/: custom.html  footer.html  header.html
src/: Main.hs
src-cli/: Main.hs
src-server/: Main.hs
src-server-lib/Type/: API.hs  Storage.hs  Store.hs
src-server-lib/Util/: Auth.hs  Client.hs  FireStore.hs  Hash.hs  Logger.hs  OrphanInstances.hs  SignedUrl.hs  Storage.hs  Tasks.hs
src-server-lib/Util/FireStore/: Document.hs  Value.hs
src-server-lib/Web/: App.hs  Config.hs
src-server/Api/: Result.hs
src-server/Handler/: ArcheAPI.hs  EBSDAPI.hs  GetEBSD.hs  GetSession.hs  MicroFeatures.hs  ORAPI.hs  ORFit.hs  Person.hs  SubmitANG.hs
src-server/Server/: Config.hs
src-server/Type/: API.hs  APIGateway.hs  Result.hs  Storage.hs  Store.hs
src-server/Util/: AWS.hs  FireStore.hs  Hash.hs  OrphanInstances.hs
src-server/Util/FireStore/: Value.hs
src-server/Web/: App.hs
src/Arche/: GBRender.hs  Grains.hs  OMRender.hs  OR.hs
src/Arche/Strategy/: GomesGraph.hs  Graph.hs  ORFitAll.hs
src/Gamma/: GBRender.hs  GammaFinder.hs  GammaGrain.hs  Grains.hs  ImageRender.hs  KurdjumovSachs.hs  OMRender.hs  OR.hs
src/Gamma/Api/: Result.hs
src/Gamma/Strategy/: Cayron.hs  Gomes.hs  GomesGraph.hs  Graph.hs  Miyamoto.hs  ORFit.hs  ORFitAll.hs  ORFitSingle.hs
test/: Main.hs  Utils.hs
test/Arche/: TestOR.hs
test/Server/FireStore/: Document.hs
