name:                gamma-builder
version:             0.1.1.0
synopsis:            Software to reconstrut Austenite for EBSD map.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Edgar Gomes de Araujo
maintainer:          Edgar.Gomes@UGent.be
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:   Gamma.OMRender
                     Gamma.GBRender
                     Gamma.Grains
                     Gamma.KurdjumovSachs
                     Gamma.GammaFinder
  -- other-modules:
  build-depends:     base                 == 4.6.*
                   , hammer               >= 0.3.1
                   , sledge               >= 0.3.2
                   , vector               >= 0.10
                   , bytestring           >= 0.10
                   , containers           >= 0.5
                   , unordered-containers >= 0.2
                   , random               >= 1
                   , hmatrix              >= 0.15
                   , monad-par            >= 0.3
                   , deepseq              >= 1.1

  exposed:           True
  buildable:         True
  ghc-options:      -O2
                    -funbox-strict-fields
                    -threaded
                    -rtsopts
                    -Wall
                    -auto-all
                    -caf-all
  hs-source-dirs:    src


Executable gamma
  Buildable:         True
  ghc-options:      -O2
                    -funbox-strict-fields
                    -threaded
                    -rtsopts
                    -Wall
                    -auto-all
                    -caf-all
  hs-source-dirs:    src
  Main-Is:           Main.hs
  Build-depends:     gamma-builder
                   , base                 == 4.*
                   , optparse-applicative >= 0.5
                   , filepath             >= 1.3
                   , directory            >= 1.0

                   , hammer               >= 0.3.1
                   , sledge               >= 0.3.2
                   , vector               >= 0.10
                   , bytestring           >= 0.10
                   , containers           >= 0.5
                   , unordered-containers >= 0.2
                   , random               >= 1
                   , hmatrix              >= 0.15
                   , monad-par            >= 0.3
                   , parallel             >= 3.1
                   , deepseq              >= 1.1
                   , primitive
