name:                arche
version:             0.1.2.0
synopsis:            Software to reconstrut Austenite for EBSD map.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Edgar Gomes de Araujo
maintainer:          Edgar.Gomes@UGent.be
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.8

Flag server
    Description:     Build the server exectable.
    Default:         False

Flag cli
    Description:     Build the cli exectable.
    Default:         True

Executable arche
  if flag(cli)
    buildable:    True
  hs-source-dirs: src-cli
  main-Is:        Main.hs
  ghc-options:
    -O2
    -funbox-strict-fields
    -threaded
    -rtsopts
    -Wall
    -fprof-auto
    -fprof-cafs
  build-depends:
      arche
    , base                 == 4.*
    , hammer               >= 0.4
    , linear-vect          >= 0.2
    , sledge               >= 0.4
    , directory            >= 1.0
    , filepath             >= 1.3
    , optparse-applicative >= 0.10

Executable arche-server
  if flag(server)
    buildable:    True
  else
    buildable:    False
  if !os(darwin)
    ld-options:   -static
    ghc-options:
      -fPIC
      -static
      -optc-static
      -optl-static
      -optl-pthread
  ghc-options:
    -O2
    -funbox-strict-fields
    -threaded
    -rtsopts
    -Wall
  hs-source-dirs: src-server
  main-Is:        Main.hs
  build-depends:
      arche
    , base                       == 4.*
    , hammer                     >= 0.4
    , linear-vect                >= 0.2
    , sledge                     >= 0.4
    , vtk                        >= 0.1
    , aeson                      >= 1.0
    , aws                        >= 0.17.1
    , aws-lambda-haskell-runtime >= 2.0
    , bytestring                 >= 0.10
    , conduit                    >= 1.3
    , conduit-extra              >= 1.3
    , containers                 >= 0.5
    , http-conduit               >= 2.0
    , random                     >= 1.0
    , resourcet                  >= 1.2
    , text                       >= 1.0
    , uuid                       >= 1.0
  other-modules:
    Handler.GetSession
    Handler.ORFit 
    Handler.SubmitANG 
    Type.APIGateway
    Util.AWS
    Util.OrphanInstances

Library
  hs-source-dirs:    src
  ghc-options:
    -O2
    -funbox-strict-fields
    -Wall
    -fprof-auto
    -fprof-cafs
  exposed-modules:
    Arche.Grains
    Arche.OR
    Arche.Strategy.GomesGraph
    Arche.Strategy.Graph
    Arche.Strategy.ORFitAll
  build-depends:
      base                 == 4.*
    , bytestring           >= 0.10
    , containers           >= 0.5
    , fast-logger          >= 2.4
    , filepath             >= 1.3
    , hammer               >= 0.4
    , linear-vect          >= 0.2
    , monad-par            >= 0.3
    , mtl                  >= 2.1
    , parallel             >= 3.1
    , process              >= 1.2
    , random               >= 1
    , sledge               >= 0.4
    , tdigest              >= 0.2.1
    , text-format          >= 0.3
    , tf-random            >= 0.4
    , unordered-containers >= 0.2
    , vector               >= 0.10
    , vector-th-unbox      >= 0.2
