name:                arche
version:             0.1.2.0
synopsis:            Software to reconstrut parent phase in martensitic transformations.
license:             AllRightsReserved
license-file:        LICENSE
author:              Edgar Gomes de Araujo
maintainer:          Edgar.Gomes@UGent.be
category:            Development
build-type:          Simple
cabal-version:       >=1.8

Flag server
    Description:     Build the server exectable.
    Default:         False

Flag static
    Description:     Build the static server exectable.
    Default:         False

Flag cli
    Description:     Build the cli exectable.
    Default:         True

Executable arche
  if flag(cli)
    buildable:    True
  hs-source-dirs: src-cli
  main-Is:        Main.hs
  ghc-options:
    -O2
    -funbox-strict-fields
    -threaded
    -rtsopts
    -Wall
    -fprof-auto
    -fprof-cafs
  build-depends:
      arche
    , base                 == 4.*
    , hammer               >= 0.4
    , linear-vect          >= 0.2
    , sledge               >= 0.4
    , directory            >= 1.0
    , filepath             >= 1.3
    , optparse-applicative >= 0.10

Executable arche-server
  if flag(server)
    buildable:    True
  else
    buildable:    False
  if flag(static)
    ld-options:   -static
    ghc-options:
      -fPIC
      -static
      -optc-static
      -optl-static
      -optl-pthread
  ghc-options:
    -O2
    -threaded
    -funbox-strict-fields
    -rtsopts
    -Wall
  hs-source-dirs: src-server
  main-Is:        Main.hs
  build-depends:
      arche
    , arche-server-lib
    , base                       == 4.*
    , sledge                     >= 0.4
    , vtk                        >= 0.1
    , aeson
    , bytestring
    , conduit
    , conduit-extra
    , gogol
    , gogol-firestore
    , gogol-storage
    , http-conduit
    , http-media
    , lens
    , optparse-applicative
    , resourcet
    , servant-server
    , servant-multipart
    , text
    , warp
  other-modules:
    Handler.EBSDAPI 
    Handler.ORAPI 
    Server.Config

Library arche-server-lib
  hs-source-dirs: src-server-lib
  ghc-options:
    -O2
    -funbox-strict-fields
    -Wall
  exposed-modules:
    Type.API
    Type.Result
    Type.Storage
    Type.Store
    Util.Auth
    Util.FireStore
    Util.FireStore.Document
    Util.FireStore.Value
    Util.Logger
    Util.OrphanInstances
    Util.SignedUrl
    Util.Storage
    Util.Hash
  build-depends:
      arche
    , base                       == 4.*
    , hammer                     >= 0.4
    , linear-vect                >= 0.2
    , sledge                     >= 0.4
    , vtk                        >= 0.1
    , adjunctions                >= 4.4
    , aeson                      >= 1.0
    , base64-bytestring          >= 1.0
    , binary                     >= 0.8
    , bytestring                 >= 0.10
    , conduit                    >= 1.3
    , conduit-extra              >= 1.3
    , containers                 >= 0.5
    , cryptonite                 >= 0.25
    , cryptostore                >= 0.2
    , gogol                      >= 0.4
    , gogol-firestore            >= 0.4
    , gogol-storage              >= 0.4
    , hashable                   >= 1.2
    , http-client                >= 0.6
    , http-client-tls            >= 0.3
    , http-conduit               >= 2.0
    , http-types                 >= 0.12
    , HTTP                       >= 4000.3
    , lens                       >= 4.0
    , memory                     >= 0.14
    , random                     >= 1.0
    , resourcet                  >= 1.2
    , servant                    >= 0.16
    , servant-client             >= 0.16
    , servant-server             >= 0.16
    , text                       >= 1.0
    , time                       >= 1.8
    , unordered-containers       >= 0.2
    , uuid                       >= 1.0
    , vector                     >= 0.12
    , warp                       >= 3.0
    , wai                        >= 3.0
    , x509                       >= 1.7

Library
  hs-source-dirs:    src
  ghc-options:
    -O2
    -funbox-strict-fields
    -Wall
  exposed-modules:
    Arche.Grains
    Arche.OR
    Arche.Strategy.GomesGraph
    Arche.Strategy.Graph
    Arche.Strategy.ORFitAll
  build-depends:
      base                 == 4.*
    , bytestring           >= 0.10
    , containers           >= 0.5
    , fast-logger          >= 2.4
    , filepath             >= 1.3
    , hammer               >= 0.4
    , linear-vect          >= 0.2
    , monad-par            >= 0.3
    , mtl                  >= 2.1
    , parallel             >= 3.1
    , process              >= 1.2
    , random               >= 1
    , sledge               >= 0.4
    , tdigest              >= 0.2.1
    , text-format          >= 0.3
    , tf-random            >= 0.4
    , unordered-containers >= 0.2
    , vector               >= 0.10
    , vector-th-unbox      >= 0.2

Benchmark arche-bench
  type: exitcode-stdio-1.0
  ghc-options:
    -O2
    -funbox-strict-fields
    -rtsopts
    -Wall
  hs-source-dirs: benchmark
  main-Is:        Main.hs
  other-modules:
    Benchmark.OR
    Benchmark.ORFit
  build-depends:
      arche
    , base                       == 4.*
    , linear-vect                >= 0.2
    , sledge                     >= 0.4
    , vtk                        >= 0.1
    , bytestring                 >= 0.10
    , containers                 >= 0.5
    , random                     >= 1.0
    , criterion                  >= 1.0
    , vector                     >= 0.10

test-suite test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
      arche
    , arche-server-lib
    , linear-vect
    , sledge
    , base
    , gogol-firestore
    , lens
    , QuickCheck
    , random
    , vector
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , unordered-containers
  other-modules:
    Arche.TestOR
    Server.FireStore.Document
    Utils
  ghc-options:
    -O2
    -funbox-strict-fields
    -rtsopts
    -Wall