name:                arche
version:             0.1.2.0
synopsis:            Software to reconstrut parent phase in martensitic transformations.
license:             AllRightsReserved
license-file:        LICENSE
author:              Edgar Gomes de Araujo
maintainer:          Edgar.Gomes@UGent.be
category:            Development
build-type:          Simple
cabal-version:       >=1.8

Flag server
    Description:     Build the server exectable.
    Default:         False

Flag static
    Description:     Build the static server exectable.
    Default:         False

Flag cli
    Description:     Build the cli exectable.
    Default:         True

Executable arche
  if flag(cli)
    buildable:    True
  hs-source-dirs: src-cli
  main-Is:        Main.hs
  ghc-options:
    -O2
    -funbox-strict-fields
    -threaded
    -rtsopts
    -Wall
    -fprof-auto-exported
    -fprof-cafs
  build-depends:
      arche
    , base                 == 4.*
    , hammer               >= 0.4
    , linear-vect          >= 0.2
    , sledge               >= 0.4
    , directory            >= 1.0
    , filepath             >= 1.3
    , optparse-applicative >= 0.10

Executable arche-server
  if flag(server)
    buildable:    True
  else
    buildable:    False
  if flag(static)
    ld-options:   -static
    ghc-options:
      -fPIC
      -static
      -optc-static
      -optl-static
      -optl-pthread
  ghc-options:
    -O2
    -threaded
    -funbox-strict-fields
    -rtsopts
    -fprof-auto-exported
    -fprof-cafs
    -Wall
  hs-source-dirs: src-server
  main-Is:        Main.hs
  build-depends:
      arche
    , arche-server-lib
    , base                       == 4.*
    , sledge                     >= 0.4
    , vtk                        >= 0.1
    , aeson
    , base64-bytestring
    , binary
    , bytestring
    , conduit
    , conduit-extra
    , gogol
    , gogol-cloudtasks
    , gogol-firestore
    , gogol-storage
    , http-client
    , http-conduit
    , http-media
    , lens
    , mtl
    , optparse-applicative
    , resourcet
    , servant-server
    , servant-multipart
    , text
    , transformers
    , unordered-containers
    , warp
  other-modules:
    Handler.ArcheAPI 
    Handler.EBSDAPI 
    Handler.ORAPI 
    Server.Config

Library arche-server-lib
  hs-source-dirs: src-server-lib
  ghc-options:
    -O2
    -funbox-strict-fields
    -fprof-auto-exported
    -fprof-cafs
    -Wall
  exposed-modules:
    Type.API
    Type.Result
    Type.Storage
    Type.Store
    Util.Auth
    Util.Client
    Util.FireStore
    Util.FireStore.Document
    Util.FireStore.Value
    Util.Logger
    Util.OrphanInstances
    Util.SignedUrl
    Util.Storage
    Util.Hash
  build-depends:
      arche
    , base                       == 4.*
    , hammer
    , linear-vect
    , sledge
    , vtk
    , adjunctions
    , aeson
    , base64-bytestring
    , binary
    , bytestring
    , conduit
    , conduit-extra
    , containers
    , cryptonite
    , cryptostore
    , free
    , gogol
    , gogol-firestore
    , gogol-storage
    , hashable
    , http-client
    , http-client-tls
    , http-conduit
    , http-types
    , HTTP
    , lens
    , memory
    , random
    , resourcet
    , servant
    , servant-client
    , servant-client-core
    , servant-server
    , text
    , time
    , unordered-containers
    , uuid
    , vector
    , warp
    , wai
    , x509

Library
  hs-source-dirs:    src
  ghc-options:
    -O2
    -funbox-strict-fields
    -fprof-auto-exported
    -fprof-cafs
    -Wall
  exposed-modules:
    Arche.Grains
    Arche.OR
    Arche.Strategy.GomesGraph
    Arche.Strategy.Graph
    Arche.Strategy.ORFitAll
  build-depends:
      base                 == 4.*
    , bytestring           >= 0.10
    , containers           >= 0.5
    , fast-logger          >= 2.4
    , filepath             >= 1.3
    , hammer               >= 0.4
    , linear-vect          >= 0.2
    , deepseq              >= 1.4
    , monad-par            >= 0.3
    , mtl                  >= 2.1
    , parallel             >= 3.1
    , process              >= 1.2
    , random               >= 1
    , sledge               >= 0.4
    , tdigest              >= 0.2.1
    , text-format          >= 0.3
    , tf-random            >= 0.4
    , unordered-containers >= 0.2
    , vector               >= 0.10
    , vector-th-unbox      >= 0.2
    , JuicyPixels          >= 3.0

Benchmark arche-bench
  type: exitcode-stdio-1.0
  ghc-options:
    -O2
    -funbox-strict-fields
    -rtsopts
    -Wall
  hs-source-dirs: benchmark
  main-Is:        Main.hs
  other-modules:
    Benchmark.OR
    Benchmark.ORFit
  build-depends:
      arche
    , base                       == 4.*
    , linear-vect                >= 0.2
    , sledge                     >= 0.4
    , vtk                        >= 0.1
    , bytestring                 >= 0.10
    , containers                 >= 0.5
    , random                     >= 1.0
    , criterion                  >= 1.0
    , vector                     >= 0.10

test-suite test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends:
      arche
    , arche-server-lib
    , linear-vect
    , sledge
    , base
    , gogol-firestore
    , lens
    , QuickCheck
    , random
    , vector
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , unordered-containers
  other-modules:
    Arche.TestOR
    Server.FireStore.Document
    Utils
  ghc-options:
    -O2
    -funbox-strict-fields
    -rtsopts
    -Wall