name:                gamma-builder
version:             0.1.2.0
synopsis:            Software to reconstrut Austenite for EBSD map.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Edgar Gomes de Araujo
maintainer:          Edgar.Gomes@UGent.be
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.8

Executable gamma
  buildable:         True
  ghc-options:      -O2
                    -funbox-strict-fields
                    -threaded
                    -rtsopts
                    -Wall
                    -auto-all
                    -caf-all
  hs-source-dirs:    src
  main-Is:           Main.hs
  other-modules:
                    Gamma.Grains
                    Gamma.OR
                    Gamma.Strategy.GomesGraph
                    Gamma.Strategy.Graph
                    Gamma.Strategy.ORFitAll
  build-depends:     base                 == 4.*
                   , optparse-applicative >= 0.10
                   , filepath             >= 1.3
                   , directory            >= 1.0

                   , hammer               >= 0.4
                   , sledge               >= 0.4
                   , vector               >= 0.10
                   , bytestring           >= 0.10
                   , containers           >= 0.5
                   , unordered-containers >= 0.2
                   , random               >= 1
                   , monad-par            >= 0.3
                   , parallel             >= 3.1
                   , tf-random            >= 0.4
                   , mtl                  >= 2.1
                   , process              >= 1.2
