name:                gamma-builder
version:             0.1.2.0
synopsis:            Software to reconstrut Austenite for EBSD map.
-- description:
license:             AllRightsReserved
license-file:        LICENSE
author:              Edgar Gomes de Araujo
maintainer:          Edgar.Gomes@UGent.be
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.8

Executable gamma
  buildable:         True
  ghc-options:      -O2
                    -funbox-strict-fields
                    -threaded
                    -rtsopts
                    -Wall
                    -fprof-auto
                    -fprof-cafs
  hs-source-dirs:    src-cli
  main-Is:           Main.hs
  build-depends:     gamma-builder
                   , base                 == 4.*
                   , optparse-applicative >= 0.10
                   , filepath             >= 1.3
                   , directory            >= 1.0
                   , hammer               >= 0.4
                   , linear-vect          >= 0.2
                   , sledge               >= 0.4

Executable gamma-server
  buildable:         True
  ghc-options:      -O2
                    -funbox-strict-fields
                    -threaded
                    -rtsopts
                    -Wall
                    -fprof-auto
                    -fprof-cafs
  hs-source-dirs:    src-server
  main-Is:           Main.hs
  build-depends:     gamma-builder
                   , base                 == 4.*
                   , hammer               >= 0.4
                   , linear-vect          >= 0.2
                   , sledge               >= 0.4

Library
  hs-source-dirs:    src
  ghc-options:      -O2
                    -funbox-strict-fields
                    -threaded
                    -rtsopts
                    -Wall
                    -fprof-auto
                    -fprof-cafs
  exposed-modules:
                    Gamma.Grains
                    Gamma.OR
                    Gamma.Strategy.GomesGraph
                    Gamma.Strategy.Graph
                    Gamma.Strategy.ORFitAll
  build-depends:     base                 == 4.*
                   , aeson                >= 1.0
                   , fast-logger          >= 2.4
                   , tdigest              >= 0.2.1
                   , text-format          >= 0.3
                   , hammer               >= 0.4
                   , linear-vect          >= 0.2
                   , sledge               >= 0.4
                   , vector               >= 0.10
                   , vector-th-unbox      >= 0.2
                   , bytestring           >= 0.10
                   , containers           >= 0.5
                   , unordered-containers >= 0.2
                   , random               >= 1
                   , monad-par            >= 0.3
                   , parallel             >= 3.1
                   , tf-random            >= 0.4
                   , mtl                  >= 2.1
                   , process              >= 1.2
                   , filepath             >= 1.3
